# swe-project

example/: linting_and_formatting.py  refactoring_challenge.py  requirements.txt  typing_example.py
example/session01/: linting_and_formatting.py
example/session02/: bool_types.py  container_types.py  custom_types.py  exception_types.py  numeric_types.py  text_types.py
example/session03/: addition.py  aliases.py  comparison.py  file_a.py  file_b.py  generics.py  generics_containers.py  generics_old.py  never.py  overload.py  protocol.py  typing_example.py  typing_example2.py
example/session04/: async.py  counter_multi_processing.py  counter_sync.py  counter_threads.py  counter_threads_random_delay.py  counter_threads_random_delay_locks.py  fib.py  fib_multi_processing.py  fib_sync.py  fib_threads.py  multi_processing.py  sync.py  threads.py
example/session05/: access.py  arithmetic.py  basics.py  callable.py  comparisons.py  containers.py  context_managers.py  type_conversions.py
example/session07/: bad_property.py  bare_except.py  future.py  imports.py  lexical_scoping.py  lexical_scoping2.py  mutable_default.py  mutable_global.py  semi_colons.py
example/session08/: abstract_factory.py  adapter.py  builder.py  decorator.py  singleton.py  strategy.py
ivan/refactoring-challenge/: example.py  main.py
precis-swe-project/: README.md  pyproject.toml
